# python-base

./: .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  README.md  compose.build.yaml  compose.development.yaml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.ssh/: config  id_rsa.sample
backend/: .devcontainer.json  .dockerignore  .env.sample  Dockerfile  Makefile  README.md  noxfile.py  pyproject.toml  setup.cfg
backend/src/: calclation.py  hello_world.py
backend/tests/: test_calculation.py
