[tool.poetry]
name = "python3-11-base"
version = "0.1.0"
description = ""
authors = ["Kazaha Horii <Kazaha.Horii@ibm.com>"]
readme = "README.md"
packages = [
  { include = "./src" },
]

[tool.poetry.dependencies]
python = "3.11.*"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
black = "^22.8.0"
pytest-mock = "^3.10.0"
nox = "^2022.11.21"
nox-poetry = "^1.0.2"
pre-commit = "^3.2.1"
commitizen = "^2.42.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"